# coach-everything-v1

./: .gitignore  ARCHITECTURE.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DASHBOARD_SETUP.md  DOCS_INDEX.md  GITHUB_SETUP.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py  test_dashboard.py
.github/workflows/: tests.yml
coach/: __init__.py  agent.py  config.py  dashboard_backend.py  llm_manager.py  main.py  timer_and_analytics.py
coach/dashboard_frontend/: README.md  index.html
coach/dashboard_frontend/css/: styles.css
coach/dashboard_frontend/js/: api.js  app.js  ui.js
coach/engines/: __init__.py  paper_searcher.py  search_engine.py  task_atomizer.py  workspace_generator.py
coach/feedback/: __init__.py  roadmap_feedback.py  task_feedback.py
coach/models/: __init__.py  roadmap.py  task.py  workspace.py
coach/storage/: __init__.py  cache_manager.py  preference_manager.py
docs/: ARCHITECTURE.md  INSTALLATION.md  QUICKSTART.md
examples/: example_usage.py
